--- a/public/wb/css/style.css
+++ b/public/wb/css/style.css
@@ -91,12 +91,12 @@ a:active {
 
 .row,
 .row-fluid {
-    margin-bottom: 30px;
+    margin-bottom: 0px;
 }
 
 .row .row,
 .row-fluid .row-fluid {
-    margin-bottom: 30px;
+    margin-bottom: 0px;
 }
 
 .row.nomargin,
@@ -282,10 +282,7 @@ header .logo img {
   height: 40px;*/
 }
 
-header .logo h1 {
-    font-size: 14px;
-    margin: 0;
-}
+
 
 
 /* --- headnav menu : signup & signin --- */
@@ -335,7 +332,7 @@ header ul.nav li {
 header ul.nav li a {
     font-size: 12px;
     border: none;
-    font-weight: 300;
+    font-weight: 400;
     text-transform: uppercase;
 }
 
@@ -424,63 +421,6 @@ select.selectmenu {
 ==================================== */
 
 
-/* --- slit slider --- */
-
-
-/* --- flexslider --- */
-
-#featured .flexslider {
-    padding: 0;
-    margin: 30px 0 30px;
-    background: #fff;
-    position: relative;
-    zoom: 1;
-}
-
-#featured .flexslider .slide-caption {
-    background: #333;
-}
-
-#featured .flexslider .slide-caption {
-    background: none;
-    -ms-filter: progid: DXImageTransform.Microsoft.gradient(startColorstr=#4C000000, endColorstr=#4C000000);
-    filter: progid: DXImageTransform.Microsoft.gradient(startColorstr=#4C000000, endColorstr=#4C000000);
-    zoom: 1;
-}
-
-#featured .flexslider .slide-caption {
-    width: 30%;
-    padding: 2%;
-    position: absolute;
-    left: 10px;
-    bottom: -30px;
-    background: rgba(0, 0, 0, .5);
-    z-index: 99;
-}
-
-#featured .flexslider .slide-caption p {
-    font-size: 14px !important;
-    line-height: 22px;
-    font-weight: 300;
-    color: #f0f0f0 !important;
-    margin-bottom: 15px;
-}
-
-#featured .flexslider .slide-caption h3 {
-    font-weight: 700;
-    color: #f4f4f4;
-    font-size: 22px;
-}
-
-#featured .flexslider .slide-caption span a {
-    padding: 7px 15px;
-    float: left;
-}
-
-#featured .flexslider .slide-caption span a:hover {
-    opacity: .9;
-}
-
 
 /* The Nivo Slider styles */
 
@@ -495,6 +435,7 @@ select.selectmenu {
 
 .nivo-slider {
     background: #fbfbfb;
+    margin-bottom: 0;
 }
 
 .slides {
@@ -520,6 +461,7 @@ select.selectmenu {
     top: 0px;
     left: 0px;
     max-width: none;
+    min-height: 550px;
 }
 
 .nivo-main-image {
@@ -574,14 +516,14 @@ select.selectmenu {
 
 .nivo-caption {
     position: absolute;
-    left: 80px;
-    bottom: 20px;
+    left: 20px;
+    bottom: 10px;
     background: #000;
     color: #fff;
     width: 30%;
     z-index: 8;
     padding: 20px;
-    opacity: 0.8;
+    opacity: 0.6;
     overflow: hidden;
     display: none;
     -moz-opacity: 0.8;
@@ -727,6 +669,16 @@ a.nivo-prevNav:before {
 }
 
 
+@media (max-width: 767px) {
+    #featured{
+        margin-bottom: 0; 
+    }
+}
+
+
+
+
+
 /* ===================================
 7. Section: call action
 ==================================== */
@@ -825,14 +777,14 @@ section.callaction {
 
 #inner-headline .inner-heading h2 {
     color: #fff;
-    margin: 20px 0 0 0;
+    margin: 10px 0 10px 0;
 }
 
 
 /* --- breadcrumbs --- */
 
 #inner-headline ul.breadcrumb {
-    margin: 30px 0 0;
+    margin: 20px 0 10px;
     float: right;
 }
 
@@ -1250,50 +1202,6 @@ footer .widget .widgetheading span {
 }
 
 
-/* --- testimonial --- */
-
-.testimonial {
-    background: #fff;
-    padding: 20px;
-    border: 1px solid #e6e6e6;
-}
-
-.testimonial .author img {
-    float: left;
-    margin: 0 10px 0;
-}
-
-.testimonial p.text {
-    color: #b2b2b2;
-    font-family: 'Noto Serif', sans-serif;
-    font-size: 14px;
-    font-style: italic;
-    line-height: 1.6em;
-    margin-bottom: 30px;
-}
-
-div.text {
-    color: #b2b2b2;
-    /* font-family: 'Noto Serif', sans-serif;*/
-    font-size: 14px;
-    font-style: ;
-    line-height: 1.6em;
-    margin-bottom: 30px;
-}
-
-div.text h4 {
-    margin: 5px;
-    padding: 0;
-}
-
-div.text h5 {
-    margin: 5px;
-    padding: 0;
-}
-
-.testimonial .author p.name {
-    font-weight: bold;
-}
 
 
 /* --- Clients style --- */
@@ -1398,165 +1306,6 @@ ul.team-detail li ul.social-network li i {
 }
 
 
-/* --- Pricing box --- */
-
-.pricing-title {
-    background: #fff;
-    text-align: center;
-    padding: 10px 0 10px 0;
-}
-
-.pricing-title h3 {
-    font-weight: 600;
-    margin-bottom: 0;
-}
-
-.pricing-offer {
-    background: #fcfcfc;
-    text-align: center;
-    padding: 40px 0 40px 0;
-    font-size: 18px;
-    border-top: 1px solid #e6e6e6;
-    border-bottom: 1px solid #e6e6e6;
-}
-
-.pricing-box.special .pricing-offer {
-    color: #fff;
-}
-
-.pricing-offer strong {
-    font-size: 78px;
-    line-height: 89px;
-}
-
-.pricing-offer sup {
-    font-size: 28px;
-}
-
-.pricing-content {
-    background: #fff;
-    text-align: center;
-    font-size: 14px;
-}
-
-.pricing-content strong {
-    color: #353535;
-}
-
-.pricing-content ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-}
-
-.pricing-content ul li {
-    border-bottom: 1px solid #e9e9e9;
-    list-style: none;
-    padding: 15px 0 15px 0;
-    margin: 0 0 0 0;
-}
-
-.pricing-action {
-    margin: 0;
-    background: #fcfcfc;
-    text-align: center;
-    padding: 20px 0 30px 0;
-}
-
-.pricing-wrapp {
-    margin: 0 auto;
-    width: 100%;
-    background: #fd0000;
-}
-
-
-/* --- pricing box alt 1 --- */
-
-.pricing-box-alt {
-    border: 1px solid #e6e6e6;
-    background: #fcfcfc;
-    position: relative;
-    margin: 0 0 20px 0;
-    padding: 0;
-    -webkit-box-shadow: 0 2px 0 rgba(0, 0, 0, 0.03);
-    -moz-box-shadow: 0 2px 0 rgba(0, 0, 0, 0.03);
-    box-shadow: 0 2px 0 rgba(0, 0, 0, 0.03);
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-}
-
-.pricing-box-alt .pricing-heading {
-    background: #fcfcfc;
-    text-align: center;
-    padding: 40px 0 0px 0;
-    display: block;
-}
-
-.pricing-box-alt.special .pricing-heading {
-    background: #fcfcfc;
-    text-align: center;
-    padding: 40px 0 1px 0;
-    border-bottom: none;
-    display: block;
-    color: #fff;
-}
-
-.pricing-box-alt.special .pricing-heading h3 {
-    color: #fff;
-}
-
-.pricing-box-alt .pricing-heading h3 strong {
-    font-size: 32px;
-    font-weight: 700;
-    letter-spacing: -1px;
-}
-
-.pricing-box-alt .pricing-heading h3 {
-    font-size: 32px;
-    font-weight: 300;
-    letter-spacing: -1px;
-}
-
-.pricing-box-alt .pricing-terms {
-    text-align: center;
-    background: #333;
-    display: block;
-    overflow: hidden;
-    padding: 30px 0 20px;
-}
-
-.pricing-box-alt .pricing-terms h6 {
-    font-style: italic;
-    margin-top: 10px;
-    color: #fff;
-    font-family: 'Noto Serif', serif;
-}
-
-.pricing-box-alt .icon .price-circled {
-    margin: 10px 10px 10px 0;
-    display: inline-block !important;
-    text-align: center !important;
-    color: #fff;
-    width: 68px;
-    height: 68px;
-    padding: 12px;
-    font-size: 16px;
-    font-weight: 700;
-    line-height: 68px;
-    text-shadow: none;
-    cursor: pointer;
-    background-color: #888;
-    border-radius: 64px;
-    -moz-border-radius: 64px;
-    -webkit-border-radius: 64px;
-}
-
-.pricing-box-alt .pricing-action {
-    margin: 0;
-    text-align: center;
-    padding: 30px 0 30px 0;
-}
 
 
 /* --- Custom carousel --- */
@@ -1580,339 +1329,6 @@ a.custom-carousel-nav:hover {
     margin: 0 0 0 140px;
 }
 
-
-/* ===============================
-14. Blog & article
-================================ */
-
-article {
-    float: left;
-    width: 100%;
-    margin-bottom: 40px;
-}
-
-article .post-heading h3 {
-    margin-bottom: 20px;
-}
-
-article .post-heading h3 a {
-    font-weight: 700;
-    color: #353535;
-}
-
-article .post-heading h3 a:hover {
-    text-decoration: none;
-}
-
-
-/* --- post meta --- */
-
-.post-meta {
-    background: #fcfcfc;
-    border: 1px solid #e6e6e6;
-    border-top: none;
-    text-align: center;
-}
-
-.post-meta .format {
-    border-bottom: 1px solid #e6e6e6;
-    padding: 10px 0 10px;
-}
-
-.post-meta i {
-    margin: 0;
-}
-
-.post-meta .date {
-    border-bottom: 1px solid #e6e6e6;
-    padding: 10px 0 10px;
-}
-
-.post-meta .date span {
-    text-align: center;
-    color: #999;
-    font-size: 12px;
-    font-weight: 600;
-}
-
-.post-meta .comments {
-    padding: 10px 0 10px;
-}
-
-.post-meta .comments a {
-    color: #999;
-    font-size: 12px;
-    font-weight: 700;
-}
-
-.post-meta .comments a:hover {
-    text-decoration: none;
-}
-
-
-/* --- post format --- */
-
-.post-image {
-    margin-bottom: 20px;
-}
-
-.post-quote {
-    margin-bottom: 20px;
-}
-
-.post-video {
-    margin-bottom: 20px;
-}
-
-.post-audio {
-    margin-bottom: 20px;
-}
-
-.post-link {
-    margin-bottom: 20px;
-}
-
-.post-slider {
-    margin-bottom: 20px;
-}
-
-.post-quote blockquote {
-    font-size: 16px;
-    color: #999;
-    font-family: 'Noto Serif', serif;
-    font-style: italic;
-    line-height: 1.6em;
-}
-
-.post-image img:hover {
-    -webkit-box-shadow: 0 0 2px #979797;
-    -moz-box-shadow: 0 0 2px #979797;
-    box-shadow: 0 0 2px #979797;
-    -webkit-transition: all 1s ease-in-out;
-    -moz-transition: all 1s ease-in-out;
-    -o-transition: all 1s ease-in-out;
-    transition: all 1s ease-in-out;
-}
-
-ul.meta-post {
-    float: left;
-    margin: 0;
-    padding: 0;
-    list-style: none;
-}
-
-ul.meta-post li {
-    float: left;
-    margin: 0 10px 0 0;
-    padding: 0;
-    list-style: none;
-    border-right: 1px dotted #e9e9e9;
-    padding-right: 10px;
-}
-
-ul.meta-post li i {
-    float: left;
-    font-size: 12px;
-    margin: 2px 5px 0 0;
-}
-
-ul.meta-post li a {
-    color: #999;
-    float: left;
-    font-size: 12px;
-    font-weight: 600;
-}
-
-
-/* --- single post --- */
-
-.bottom-article {
-    float: left;
-    width: 100%;
-    border-top: 1px solid #e9e9e9;
-    border-bottom: 1px solid #e9e9e9;
-    padding: 10px 0 10px 0;
-    margin-top: 20px;
-}
-
-
-/* --- author info --- */
-
-.about-author {
-    border: 1px solid #d5d5d5;
-    padding: 20px;
-    float: left;
-    margin-bottom: 5px;
-}
-
-.about-author h5 {
-    margin-bottom: 10px;
-}
-
-
-/* --- Comment --- */
-
-.comment-area {
-    float: left;
-    width: 100%;
-    margin-top: 30px;
-}
-
-.media-content {
-    overflow: hidden;
-    margin-left: 12px;
-    border-bottom: 1px dotted #d5d5d5;
-    padding-bottom: 20px;
-}
-
-.media-content h6 {
-    font-size: 14px;
-    font-weight: 700;
-}
-
-.media-content span {
-    color: #a9a9a9;
-    font-size: 14px;
-    font-weight: 300;
-}
-
-.comment-area .thumbnail>img {
-    display: block;
-    width: 60px;
-    height: 60px;
-}
-
-.filter-list {
-    margin-top: 20px;
-}
-
-
-/* --- pagination --- */
-
-#pagination a,
-#pagination span {
-    display: block;
-    float: left;
-    margin: 0 7px 0 0;
-    padding: 7px 10px 6px 10px;
-    font-size: 12px;
-    line-height: 12px;
-    color: #888;
-    font-weight: 600;
-}
-
-#pagination a:hover {
-    color: #fff;
-    text-decoration: none;
-}
-
-#pagination span.current {
-    background: #333;
-    color: #fff;
-    font-weight: bold;
-}
-
-
-/* ===============================
-15. Aside, sidebar
-================================ */
-
-aside {
-    position: relative;
-    margin-bottom: 40px;
-}
-
-.sidebar-nav {
-    float: left;
-    width: 100%;
-}
-
-.right-sidebar {
-    border-left: 1px solid #e9e9e9;
-    padding: 0 0 0 30px;
-    -webkit-box-shadow: inset 1px 0 0 0 rgba(0, 0, 0, .01);
-    box-shadow: inset 1px 0 0 0 rgba(0, 0, 0, .01);
-}
-
-.left-sidebar {
-    border-right: 1px solid #e9e9e9;
-    padding: 0 30px 0 0;
-    -webkit-box-shadow: inset 1px 0 0 0 rgba(0, 0, 0, .01);
-    box-shadow: inset 1px 0 0 0 rgba(0, 0, 0, .01);
-}
-
-.left-sidebar .widget h3,
-.left-sidebar .widget .widget-content {
-    padding-right: 20px;
-}
-
-aside .widget {
-    margin-bottom: 40px;
-}
-
-ul.cat,
-ul.recent,
-ul.folio-detail,
-ul.contact-info {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-}
-
-ul.cat li,
-ul.recent li,
-ul.folio-detail li,
-ul.contact-info li {
-    margin: 0 0 15px 0;
-    list-style: none;
-}
-
-ul.cat li a,
-ul.folio-detail li a {
-    color: #656565;
-}
-
-ul.folio-detail li label {
-    display: inline;
-    cursor: default;
-    color: #353535;
-    font-weight: bold;
-}
-
-.widget ul.recent li {
-    margin-bottom: 20px;
-}
-
-ul.recent li h6 {
-    margin: 0 0 10px 0;
-}
-
-ul.recent li h6 a {
-    color: #353535;
-    font-size: 16px;
-    font-weight: 600;
-}
-
-.widget ul.tags {
-    list-style: none;
-    margin: 0;
-}
-
-.widget ul.tags li {
-    margin: 0 5px 15px 0;
-    display: inline-block;
-}
-
-.widget ul.tags li a {
-    background: #e6e6e6;
-    color: #333;
-    padding: 5px 10px;
-}
-
-.widget ul.tags li a:hover {
-    text-decoration: none;
-    color: #fff;
-}
 
 
 /* ===== Widgets ===== */
@@ -1972,81 +1388,6 @@ footer .widget .flickr_badge img {
     border: none;
 }
 
-
-/* --- Recent post widget --- */
-
-.recent-post {
-    margin: 20px 0 0 0;
-    padding: 0;
-    line-height: 18px;
-}
-
-.recent-post h5 a:hover {
-    text-decoration: none;
-}
-
-.recent-post .text h5 a {
-    color: #353535;
-}
-
-ul.time-post {
-    float: left;
-    width: 120px;
-    padding: 0;
-    list-style: none;
-    margin: 0 20px 0 0;
-    text-align: center;
-    color: #0e0f0f;
-}
-
-ul.time-post li {
-    float: none;
-    background: #f8f8f8;
-    list-style: none;
-    margin: 0 0 2px 0;
-    padding: 0;
-}
-
-ul.time-post li a img:hover {
-    opacity: 0.8;
-    /* For IE 5-7 */
-    filter: progid: DXImageTransform.Microsoft.Alpha(Opacity=80);
-    /* For IE 8 8 */
-    -MS-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
-}
-
-ul.time-post li.time {
-    float: none;
-    padding: 5px 0 5px 0;
-    text-shadow: none;
-}
-
-.recent-post ul.time-post li.time {
-    color: #121214;
-}
-
-.post-meta {
-    margin-bottom: 20px;
-}
-
-.post-meta span {
-    padding: 0 10px 0 10px;
-    margin-bottom: 10px;
-}
-
-.post-meta span a {
-    color: #919191;
-}
-
-.post-meta strong {
-    font-weight: 200px;
-    color: #c7c7c7;
-}
-
-.item .text {
-    margin-left: 140px;
-    margin-bottom: 20px;
-}
 
 
 /* ===============================
@@ -2126,51 +1467,6 @@ ul.social-network li {
 
 /* --- buttons --- */
 
-.bs-docs-example {
-    margin: 0 0 10px 0;
-}
-
-.demobtn a.btn {
-    margin: 0 10px 10px 0;
-}
-
-section.demogrid .span1,
-section.demogrid .span2,
-section.demogrid .span3,
-section.demogrid .span4,
-section.demogrid .span5,
-section.demogrid .span6,
-section.demogrid .span7,
-section.demogrid .span8,
-section.demogrid .span9,
-section.demogrid .span10,
-section.demogrid .span11 {
-    background: #f6f6f6;
-    text-align: center;
-    padding: 20px 0 20px;
-}
-
-section.demogrid .show-grid .row,
-section.demogrid .show-grid .row-fluid {
-    margin-bottom: 0;
-}
-
-section.demogrid .show-grid .nest {
-    background: #ddd;
-    text-align: center;
-    padding: 20px 0 20px;
-}
-
-section.demogrid .span12.nest {
-    background: #f6f6f6;
-    text-align: center;
-    padding: 20px 0 0;
-}
-
-.demoinline p {
-    display: inline;
-    margin-right: 20px;
-}
 
 
 /* --- demo animations --- */
